// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-app-onboard-prereq - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess whether source code is ready to deploy to Azure — the check BEFORE infrastructure work. Evaluates build health, app completeness, dependencies and local services, stack compatibility, and deployment feasibility. Answers questions about what your app needs before it can be deployed — frameworks, dependencies, and configuration. Checks whether dependencies are compatible and identifies deployment blockers and unsupported frameworks. WHEN: "evaluate my repo", "is my app ready to deploy", "what does my app need to deploy", "what do I need before deploying", "does my app need", "can I ship this to Azure", "scan my repo for issues", "is this app deployable", "check if my app is ready for Azure", "do I need a Dockerfile".",
  "extractedKeywords": [
    "about",
    "answers",
    "app",
    "assess",
    "azure",
    "before",
    "bicep",
    "blockers",
    "build",
    "check",
    "checks",
    "cli",
    "code",
    "compatibility",
    "compatible",
    "completeness",
    "configuration",
    "dependencies",
    "deploy",
    "deployable",
    "deployed",
    "deploying",
    "deployment",
    "dockerfile",
    "does",
    "evaluate",
    "evaluates",
    "feasibility",
    "frameworks",
    "health",
    "identifies",
    "infrastructure",
    "issues",
    "local",
    "mcp",
    "need",
    "needs",
    "onboard",
    "prereq",
    "questions",
    "rbac",
    "ready",
    "repo",
    "scan",
    "services",
    "ship",
    "source",
    "stack",
    "terraform",
    "this",
    "unsupported",
    "what",
    "when",
    "whether",
    "work",
    "your",
  ],
  "name": "azure-app-onboard-prereq",
}
`;

exports[`azure-app-onboard-prereq - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "about",
  "answers",
  "app",
  "assess",
  "azure",
  "before",
  "bicep",
  "blockers",
  "build",
  "check",
  "checks",
  "cli",
  "code",
  "compatibility",
  "compatible",
  "completeness",
  "configuration",
  "dependencies",
  "deploy",
  "deployable",
  "deployed",
  "deploying",
  "deployment",
  "dockerfile",
  "does",
  "evaluate",
  "evaluates",
  "feasibility",
  "frameworks",
  "health",
  "identifies",
  "infrastructure",
  "issues",
  "local",
  "mcp",
  "need",
  "needs",
  "onboard",
  "prereq",
  "questions",
  "rbac",
  "ready",
  "repo",
  "scan",
  "services",
  "ship",
  "source",
  "stack",
  "terraform",
  "this",
  "unsupported",
  "what",
  "when",
  "whether",
  "work",
  "your",
]
`;
